[gd_scene load_steps=9 format=3 uid="uid://b2avtnchm6la0"]

[ext_resource type="Script" uid="uid://b6ks66paov3ks" path="res://scripts/GameScene.gd" id="1_w5aja"]
[ext_resource type="PackedScene" uid="uid://bftt3sh7ylbn2" path="res://ItemBar.tscn" id="2_onqr8"]
[ext_resource type="PackedScene" uid="uid://dabyek6g4ed0n" path="res://GameOver_Screen.tscn" id="3_y3j0m"]
[ext_resource type="PackedScene" uid="uid://dwq2yhspy7q4a" path="res://TileSelect_Screen.tscn" id="4_rurhu"]
[ext_resource type="PackedScene" uid="uid://bqo6ci6u6f6fo" path="res://Shop.tscn" id="5_kk2rg"]
[ext_resource type="Script" uid="uid://bwx4f5nipcceq" path="res://scripts/Multiplayer_Synchronizer.gd" id="6_rurhu"]
[ext_resource type="PackedScene" uid="uid://chet0dxnbb2qs" path="res://Player_Board.tscn" id="7_kk2rg"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_b5spy"]
properties/0/path = NodePath("Player_Turn_Announcer:text")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("Player_Turn_Announcer:self_modulate")
properties/1/spawn = true
properties/1/replication_mode = 1

[node name="GameScene" type="Node2D"]
script = ExtResource("1_w5aja")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)

[node name="Turn_Button" type="Button" parent="."]
offset_left = 1071.0
offset_top = 308.0
offset_right = 1149.0
offset_bottom = 339.0
text = "End Turn"

[node name="Player_Turn_Announcer" type="RichTextLabel" parent="."]
self_modulate = Color(1, 1, 1, 0)
z_index = 3
custom_minimum_size = Vector2(700, 200)
offset_left = 226.0
offset_top = 224.0
offset_right = 926.0
offset_bottom = 424.0
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 56
text = "It's Player 1's Turn"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="MultiplayerControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Discard_Tip" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(40, 40)
offset_left = 530.0
offset_top = 280.0
offset_right = 830.0
offset_bottom = 320.0
text = "You can buy more tiles from the shop"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemBar" parent="." instance=ExtResource("2_onqr8")]
z_index = -1
position = Vector2(576, 20)

[node name="Player_Board" parent="." instance=ExtResource("7_kk2rg")]

[node name="Shop" parent="." instance=ExtResource("5_kk2rg")]
visible = false
visibility_layer = 2
z_index = 2

[node name="TileSelect_Screen" parent="." instance=ExtResource("4_rurhu")]
visible = false
top_level = true
z_index = 2
position = Vector2(576, 324)

[node name="GameOver_Screen" parent="." instance=ExtResource("3_y3j0m")]
modulate = Color(1, 1, 1, 0)
top_level = true
z_index = 2
position = Vector2(576, 972)

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_b5spy")
script = ExtResource("6_rurhu")

[connection signal="pressed" from="Turn_Button" to="." method="_on_Turn_Button_pressed"]
